fix: problem with automatic zoom on iphone, replaced the input font size to 16px

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -9,6 +9,12 @@
   min-height: 100dvh;
 }
 
+#root input {
+  font-size: 16px;
+  padding-left: 5px;
+  padding-block: 5px;
+}
+
 html, body {
   margin: 0;
   overscroll-behavior: none;
