--- a/src/styles/Dashboard.css
+++ b/src/styles/Dashboard.css
@@ -12,6 +12,6 @@
 
 button {
     width: 100%;
-    font-size: 14px;
+    font-size: 16px;
     margin-block-start: 10px;
 }
